--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row time-block">
-        <div class="hour">9AM</div>
-        <div class="description present"></div>
+        <div class="hour col-1 pt-2 d-flex justify-content-end"><p>9AM</p></div>
+        <div class="description past col-10 pt-2 d-flex justify-content-start"><p class="text-dark"></p></div>
+        <div class="saveBtn col-1 d-flex justify-content-center align-items-center"><i class="fas fa-save fa-3x"></i></div>
       </div>
     </div>
 
