--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
   </head>
 
   <body>
+    <!-- Jumbotron -->
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
+      <!-- Day is displayed on page load -->
       <p id="currentDay" class="lead"></p>
     </header>
+
+
     <div class="container">
       <!-- Timeblocks go here -->
       <!-- 9AM row -->
